[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0.197", features=["derive"]}
serde_json = "1.0.115"
dotenvy = "0.15.7"
sqlx = { features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }

# Auxilliary crates
anyhow = "1.0.58"
